Entrega Final Proyecto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="bodyIndex">
     <header>
         <nav class="navbar flex-row container">
-            <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img id="logo" src="./public/image/logoSol2.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menuItem--active">
                     <a href="index.html" class="menuLink">Menu</a>
@@ -36,14 +36,42 @@
                 </li>
             </ul>
         </nav>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-
     </header>
     <main id="mainIndex">
-        
+        <div class="home">
+            <div class="tituloDiaDelPadre">
+                <h1>🎂 FELIZ DIA DEL PADRE 🎂</h1>
+            </div>
+            <div class="carousel">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100 imgCarousel" src="public/image/diaDelPadreTortaCamisa.jpg"
+                                alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 imgCarousel" src="public/image/diaDelPadreTortaCerveza.jpg"
+                                alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 imgCarousel" src="public/image/diaDelPadreTortaPelota.jpg"
+                                alt="Third slide">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer>
         <div class="redes">
