--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar flex-row container">
-            <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
+            <a href="../../index.html" class="logo"><img id="logo" src="../image/logoSol2.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menuItem">
                     <a href="../../index.html" class="menuLink">Menu</a>
@@ -43,7 +43,7 @@
                 <label for="nombre">
                     <p>NOMBRE</p>
                 </label>
-                <input type="text" placeholder="ingrese su nombre" id="nombre" class="margenesContacto">
+                <input type="text" placeholder="ingrese su nombre" id="nombre" class="margenesContacto" class="cuadrosContacto">
                 <label for="correo">
                     <p>CORREO</p>
                 </label>
@@ -68,7 +68,6 @@
                 <input type="submit" class="enviarReset">
                 <input type="reset" class="enviarReset">
             </div>
-
         </form>
     </main>
     <footer>
