--- a/public/pages/galeria.html
+++ b/public/pages/galeria.html
@@ -16,7 +16,7 @@
 <body id="bodyGaleria">
     <header>
         <nav class="navbar flex-row container">
-            <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
+            <a href="../../index.html" class="logo"><img id="logo" src="../image/logoSol2.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menuItem">
                     <a href="../../index.html" class="menuLink">Menu</a>
@@ -38,7 +38,11 @@
     </header>
     <main id="mainGaleria">
         <div class="galeria">
-            <h1>Nuestros Trabajos</h1>
+            <div class="banner">
+                <div class="imgBanner">
+                    <img src="../image/logoBannersmprueba3.jpg" alt="banner sol accursio" class="imgBannerSol">
+                </div>
+            </div>
             <div class="lineaGaleria"></div>
             <div class="fotosGaleria container">
                 <div class="imgTodasGal">
