--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar flex-row container">
-            <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
+            <a href="../../index.html" class="logo"><img id="logo" src="../image/logoSol2.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menuItem">
                     <a href="../../index.html" class="menuLink">Menu</a>
@@ -42,26 +42,16 @@
         <section class="sectionOne">
             <article>
                 <h1 class="tituloPrincipal">Pasteleria Artesanal</h1>
-                <p class="textoPrincipal">En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor
+                <p class="textoPrincipal">🍪En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor
                     pastelería casera, basada en recetas tradicionales y elaborada siempre con ingredientes de
-                    primera calidad. Pastelería casera, sin conservantes, hecha con amor.
-                </p>
+                    primera calidad. Pastelería casera, sin conservantes, hecha con amor. 
+                </p> 
+            </article>  
         </section>
-        <section class="sectionTwo container">
-            <div class="imgNosotros">
-                <div class="imgTodasNos" id="imgPast2">
-                    <img src="../image/pasteleros2.jpg" alt="foto pastelero">
-                </div>
-                <div class="imgTodasNos" id="imgManga">
-                    <img src="../image/manga.jpg" alt="foto pastelero">
-                </div>
-                <div class="imgTodasNos" id="imgPast3">
-                    <img src="../image/pasteleros3.jpg" alt="foto pastelero">
-                </div>
-                <div class="imgTodasNos" id="imgPast4">
-                    <img src="../image/pasteleros4.png" alt="foto pastelero">
-                </div>
-            </div>
+        <section class="sectionTwo">
+               <p class="textoSecundario">
+                🍪La sonrisa de nuestros clientes es lo que nos motiva, creemos que el mejor secreto culinario es el amor, por eso ponemos mucho de el en nuestras creaciones.
+               </p> 
         </section>
     </main>
     <footer>
