--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <nav class="navbar flex-row container">
-      <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
+      <a href="../../index.html" class="logo"><img id="logo" src="../image/logoSol2.png" alt="logo"></a>
       <ul class="menu flex-row">
         <li class="menuItem">
           <a href="../../index.html" class="menuLink">Menu</a>
@@ -36,8 +36,8 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <div class="container my-2">
+  <main id="mainProductos">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
           <img src="../image/alfajorAlmendras.jpg" class="card-img-top" alt="alfajor de almendras">
