Pagina carrito terminado

--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -23,7 +23,7 @@
                     <a href="../../index.html" class="menuLink">Menu</a>
                 </li>
                 <li class="menuItem">
-                    <a href="productos.html" class="menuLink">Productos</a>
+                    <a href="tienda.html" class="menuLink">Tienda</a>
                 </li>
                 <li class="menuItem">
                     <a href="galeria.html" class="menuLink">Galeria</a>
