--- a/public/pages/tienda.html
+++ b/public/pages/tienda.html
@@ -23,7 +23,7 @@
                     <a href="../../index.html" class="menuLink">Menu</a>
                 </li>
                 <li class="menuItem--active">
-                    <a href="productos.html" class="menuLink">Productos</a>
+                    <a href="tienda.html" class="menuLink">Tienda</a>
                 </li>
                 <li class="menuItem">
                     <a href="galeria.html" class="menuLink">Galeria</a>
@@ -38,67 +38,74 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <h1>Carrito</h1>
-            <hr>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Item</th>
-                        <th scope="col">Cantidad</th>
-                        <th scope="col">Acción</th>
-                        <th scope="col">Total</th>
-                    </tr>
-                </thead>
-                <tbody id="items"></tbody>
-                <tfoot>
-                    <tr id="footer">
-                        <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-                    </tr>
-                </tfoot>
-            </table>
-            <div class="row" id="cards"></div>
-        </div>
-        <template id="template-card">
-            <div class="col-12 mb-2">
-                <div class="card">
-                    <img src="" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h5>Titulo</h5>
-                        <p>precio</p>
-                        <button class="btn btn-dark">Agregar al Carrito</button>
+        <div>
+            <template id="template-card">
+                <div class="cards">
+                    <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+                        <img src="" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Titulo</h5>
+                            <p class="card-text">precio</p>
+                            <button class="btn btn-primary">Agregar al Carrito</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </template>
-        <template id="template-footer">
-            <th scope="row" colspan="2">Total productos</th>
-            <td>10</td>
-            <td>
-                <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-                    vaciar todo
-                </button>
-            </td>
-            <td class="font-weight-bold">$ <span>5000</span></td>
-        </template>
-
-        <template id="template-carrito">
-            <tr>
-                <th scope="row">id</th>
-                <td>Café</td>
-                <td>1</td>
+            </template>
+            <div class="row" id="cards"></div>
+        </div>
+        <div id="carro">
+            <template id="template-footer">
+                <th scope="row" colspan="2">Total productos</th>
+                <td>10</td>
                 <td>
-                    <button class="btn btn-info btn-sm">
-                        +
-                    </button>
-                    <button class="btn btn-danger btn-sm">
-                        -
+                    <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+                        vaciar todo
                     </button>
                 </td>
-                <td>$ <span>500</span></td>
-            </tr>
-        </template>
+                <td>
+                    <button class="btn btn-success" id="comprar">Enviar Pedido</button>
+                </td>
+                <td class="font-weight-bold">$ <span>5000</span></td>
+            </template>
+
+            <template id="template-carrito">
+                <tr>
+                    <th scope="row">id</th>
+                    <td>articulo</td>
+                    <td>1</td>
+                    <td>
+                        <button class="btn btn-info btn-sm">
+                            +
+                        </button>
+                        <button class="btn btn-danger btn-sm">
+                            -
+                        </button>
+                    </td>
+                    <td>$ <span>500</span></td>
+                </tr>
+            </template>
+            <div class="container">
+                <h1>Carrito</h1>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Producto</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">+/-</th>
+                            <th scope="col">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="items"></tbody>
+                    <tfoot>
+                        <tr id="footer">
+                            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+                        </tr>
+                    </tfoot>
+                </table>
+                <div class="row" id="cards"></div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="redes">
