--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="index.html" class="menuLink">Menu</a>
                 </li>
                 <li class="menuItem">
-                    <a href="public/pages/productos.html" class="menuLink">Productos</a>
+                    <a href="public/pages/tienda.html" class="menuLink">Tienda</a>
                 </li>
                 <li class="menuItem">
                     <a href="public/pages/galeria.html" class="menuLink">Galeria</a>
