--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main id="mainContacto">
-        <form action="" method="post" class="formContacto">
+        <form class="formContacto" action="https://formspree.io/f/xeqdovkr" method="POST">
             <div class="divContacto">
                 <label for="nombre">
                     <p>NOMBRE</p>
@@ -80,6 +80,7 @@
         </div>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
     </footer>
+    <script src="./form.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
