--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main id="mainContacto">
-        <form class="formContacto" action="https://formspree.io/f/xeqdovkr" method="POST">
+        <form class="formContacto form" action="https://formspree.io/f/xeqdovkr" method="POST">
             <div class="divContacto">
                 <label for="nombre">
                     <p>NOMBRE</p>
